--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
 
     <string name="login_join_certi_recerti"><u>인증번호 다시받기!</u></string>
     <string name="login_join_certi_succed"><u>인증완료!</u></string>
+    <string name="buy_write_gamemachine">구입희망 게임기명</string>
 </resources>
